--- a/food-delivery-app/app/src/main/res/layout/item_restaurant_header.xml
+++ b/food-delivery-app/app/src/main/res/layout/item_restaurant_header.xml
@@ -13,17 +13,17 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="20dp">
+        android:paddingTop="@dimen/margin_x_small"
+        android:paddingBottom="@dimen/margin_x_small"
+        android:layout_marginTop="@dimen/margin_small"
+        android:layout_marginBottom="@dimen/margin_small"
+        android:layout_marginStart="@dimen/margin_large">
 
         <TextView
+            style="@style/Text_Bebas_Huge"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
             android:textStyle="bold"
             android:gravity="center_vertical"
             tools:text="FAVORITE RESTAURANTS"
