--- a/food-delivery-app/app/src/main/res/values/styles.xml
+++ b/food-delivery-app/app/src/main/res/values/styles.xml
@@ -8,4 +8,34 @@
         <item name="android:textAllCaps">false</item>
     </style>
 
+    <style name="Text_Bebas">
+        <item name="fontFamily">@font/louis</item>
+        <item name="color">@color/black</item>
+    </style>
+
+    <style name="Text_Bebas_Small" parent="Text_Bebas">
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="Text_Bebas_Medium" parent="Text_Bebas">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Text_Bebas_Large" parent="Text_Bebas">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="Text_Bebas_xx_Large" parent="Text_Bebas">
+        <item name="android:textSize">30sp</item>
+    </style>
+
+    <style name="Text_Bebas_Huge" parent="Text_Bebas">
+        <item name="android:textSize">36sp</item>
+    </style>
+
+    <style name="chipText" parent="TextAppearance.MaterialComponents.Chip">
+        <item name="android:textSize">@dimen/size_medium_text</item>
+        <item name="android:fontFamily">@font/louis</item>
+    </style>
+
 </resources>
