--- a/food-delivery-app/app/src/main/res/values/themes.xml
+++ b/food-delivery-app/app/src/main/res/values/themes.xml
@@ -7,6 +7,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:buttonStyle">@style/Button</item>
         <item name="buttonStyle">@style/Button</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
 </resources>
