bk-code-refactor-1 -> Refactor code style, logic and structure

--- a/food-delivery-app/app/src/main/res/layout/item_restaurant_header.xml
+++ b/food-delivery-app/app/src/main/res/layout/item_restaurant_header.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="com.bkarakoca.fooddeliveryapp.data.uimodel.restaurant.RestaurantHeaderUIModel" />
+            type="com.bkarakoca.fooddeliveryapp.data.uimodel.restaurant.listitem.RestaurantHeaderUIModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
