--- a/food-delivery-app/app/src/main/res/layout/item_restaurant.xml
+++ b/food-delivery-app/app/src/main/res/layout/item_restaurant.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="item"
-            type="com.bkarakoca.fooddeliveryapp.data.uimodel.restaurant.RestaurantUIModel" />
+            type="com.bkarakoca.fooddeliveryapp.data.uimodel.restaurant.listitem.RestaurantUIModel" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
